@@ -1,3 +1,9 @@
+2002-02-02  Kevin Turner  <acapnotic@twistedmatrix.com>
+
+	* twisted/words/ircservice.py (IRCChatter.receiveDirectMessage),
+	(IRCChatter.receiveGroupMessage), 
+	(IRCChatter.irc_PRIVMSG): Added CTCP ACTION <-> emote translation
+
 2002-01-29  Itamar Shtull-Trauring <itamarst@twistedmatrix.com>
 
 	* Added hook to tcp.Port and ssl.Port for limiting acceptable
